real-time input update

--- a/index.html
+++ b/index.html
@@ -60,10 +60,15 @@
       <select class="input" id="input-njs-scale" disabled>
         <option value="njs">NJS - Note Jump Speed</option>
         <option value="hjd" selected>HJD - Half Jump Duration</option>
-      </select>
+      </select><br>
+      <span>When changing jump distance, scale either HJD or NJS.</span>
     </div>
   </div>
   <hr>
+  <div style="float: right">
+    <span id="watermark"></span>
+    <a id="version"></a>
+  </div>
   <script src="./index.js" defer></script>
   <script src="./ui.js" defer></script>
 </body>
