--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
       <label for="input-bpm">BPM:</label><br>
       <input type="number" class="input main" id="input-bpm" name="input-bpm" min="0" step="1">
       <br>
-      <label for="input-beatprec">Precision: 1 / </label>
+      <label for="input-beatprec">Beat Prec.: 1 / </label>
       <input type="number" class="input" id="input-beatprec" name="input-beatprec" min="1" step="1" disabled>
+      <br>
+      <label for="input-timeprec">Time Prec.: </label>
+      <input type="number" class="input" id="input-timeprec" name="input-timeprec" min="0" step="0.125" disabled>
     </div>
     <div class="panel-small">
       <span>Effective BPM:</span><br>
