--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=0.5, minimum-scale=0.5">
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" type="image/jpg" href="favicon.png" />
   <title>BS Mapping Utility</title>
@@ -10,67 +11,175 @@
 
 <body>
   <h1>Beat Saber Mapping Utility</h1>
-  <div class="settings">
-    <div class="panel-small">
-      <label for="input-bpm">BPM:</label><br>
-      <input type="number" class="input main" id="input-bpm" name="input-bpm" min="0" step="1">
-      <br>
-      <label for="input-beatprec">Beat Prec.: 1 / </label>
-      <input type="number" class="input" id="input-beatprec" name="input-beatprec" min="1" step="1" disabled>
-      <br>
-      <label for="input-timeprec">Time Prec.: </label>
-      <input type="number" class="input" id="input-timeprec" name="input-timeprec" min="0" step="0.125" disabled>
-    </div>
-    <div class="panel-small">
-      <span>Effective BPM:</span><br>
-      <input type="number" class="input" id="input-ebpm-ohj" name="input-ebpm-ohj" min="0" step="1" disabled>
-      <label for="input-ebpm-ohj">(1-handed)</label>
-      <br>
-      <input type="number" class="input" id="input-ebpm-stream" name="input-ebpm-stream" min="0" step="1" disabled>
-      <label for="input-ebpm-stream">(2-handed)</label>
-    </div>
-    <div class="panel-small" style="width: auto">
-      <span>Time between precision: </span><span id="output-time-prec">0ms</span><br>
+  <div class="main">
+    <h2>Map Settings</h2>
+    <label for="input-bpm">BPM:</label>
+    <input type="number" class="input main" id="input-bpm" name="input-bpm" min="0" step="1"><br>
+    <div>
+      <h3>Effective BPM & Time Precision</h3>
+      <div class="panel-medium">
+        <label for="input-beatprec">Beat Precision: 1 / </label>
+        <input type="number" class="input" id="input-beatprec" name="input-beatprec" min="1" step="1" disabled>
+        <br>
+        <label for="input-timeprec">Time Precision: </label>
+        <input type="number" class="input" id="input-timeprec" name="input-timeprec" min="0" step="0.125" disabled><br>
+        <label for="input-realtimeprec">Real-time (ms): </label>
+        <input type="number" class="input" id="input-realtimeprec" name="input-realtimeprec" min="0" step="1"
+          disabled><br>
+      </div>
+      <div class="panel-medium">
+        <span>Effective BPM:</span><br>
+        <input type="number" class="input" id="input-ebpm-ohj" name="input-ebpm-ohj" min="0" step="1" disabled>
+        <label for="input-ebpm-ohj">(1-handed)</label>
+        <br>
+        <input type="number" class="input" id="input-ebpm-stream" name="input-ebpm-stream" min="0" step="1" disabled>
+        <label for="input-ebpm-stream">(2-handed)</label>
+      </div>
     </div>
     <hr>
-    <div class="panel-small">
-      <input type="number" class="input" id="input-njs" name="input-njs" min="0" step="1" disabled>
-      <label for="input-njs">NJS</label><br>
-      <input type="number" class="input" id="input-offset" name="input-offset" step="0.125" disabled>
-      <label for="input-offset">Offset</label><br>
-      <br>
-    </div>
-    <div class="panel-small">
-      <input type="number" class="input" id="input-hjd" name="input-hjd" min="0" step="1" disabled>
-      <label for="input-hjd">HJD</label><br>
-      <input type="number" class="input" id="input-jd" name="input-jd" min="0" step="0.25" disabled>
-      <label for="input-jd">JD</label><br>
-      <label for="input-reacttime">Reaction Time (ms):</label><br>
-      <input type="number" class="input" id="input-reacttime" name="input-reacttime" min="0" step="1" disabled>
-    </div>
-    <div class="panel-small" style="width: auto">
-      <span>Minimum </span>
-    </div>
-    <div class="panel-small" style="width: auto">
-      <span>HJD: </span><span id="output-hjd">1</span><br>
-      <span>JD: </span><span id="output-jd">0</span><br>
-      <span>Reaction Time: </span><span id="output-reacttime">0ms</span>
-    </div>
-    <br>
-    <br>
     <div>
-      <label for="input-njs-scale">Jump distance scale for:</label>
-      <select class="input" id="input-njs-scale" disabled>
-        <option value="njs">NJS - Note Jump Speed</option>
-        <option value="hjd" selected>HJD - Half Jump Duration</option>
-      </select><br>
-      <span>When changing jump distance, scale either HJD or NJS.</span>
+      <h3>Note Jump Speed (NJS)</h3>
+      <div class="panel-small">
+        <input type="number" class="input" id="input-njs" name="input-njs" min="0" step="1" disabled>
+        <label for="input-njs">NJS</label><br>
+        <input type="number" class="input" id="input-offset" name="input-offset" step="0.125" disabled>
+        <label for="input-offset">Offset</label><br>
+        <br>
+      </div>
+      <div class="panel-small">
+        <input type="number" class="input" id="input-hjd" name="input-hjd" min="0" step="1" disabled>
+        <label for="input-hjd">HJD</label><br>
+        <input type="number" class="input" id="input-jd" name="input-jd" min="0" step="0.25" disabled>
+        <label for="input-jd">JD</label><br>
+        <label for="input-reacttime">Reaction Time (ms):</label><br>
+        <input type="number" class="input" id="input-reacttime" name="input-reacttime" min="0" step="1" disabled>
+      </div>
+      <div class="panel-small" style="width: auto">
+        <span>Minimum </span>
+      </div>
+      <div class="panel-small" style="width: auto">
+        <span>HJD: </span><span id="output-hjd">1</span><br>
+        <span>JD: </span><span id="output-jd">0</span><br>
+        <span>Reaction Time: </span><span id="output-reacttime">0ms</span>
+      </div><br>
+      <br>
+      <div>
+        <label for="option-njs-scale">Jump distance scale for:</label>
+        <select class="input" id="option-njs-scale" disabled>
+          <option value="njs">NJS - Note Jump Speed</option>
+          <option value="hjd" selected>HJD - Half Jump Duration</option>
+        </select><br>
+        <span>When changing jump distance, scale either HJD or NJS.</span>
+      </div>
+    </div>
+    <hr>
+    <div>
+      <h3>SPS Difference</h3>
+      <table>
+        <tr>
+          <th>Easy</th>
+          <th>Normal</th>
+          <th>Hard</th>
+          <th>Expert</th>
+          <th>Expert+</th>
+        </tr>
+        <tr>
+          <td><input type="number" class="table-input" id="input-sps-easy" min="0" step="0.1"></td>
+          <td><input type="number" class="table-input" id="input-sps-normal" min="0" step="0.1"></td>
+          <td><input type="number" class="table-input" id="input-sps-hard" min="0" step="0.1"></td>
+          <td><input type="number" class="table-input" id="input-sps-expert" min="0" step="0.1"></td>
+          <td><input type="number" class="table-input" id="input-sps-expertplus" min="0" step="0.1"></td>
+        </tr>
+        <tr>
+          <td id="output-sps-easy"></td>
+          <td id="output-sps-normal"></td>
+          <td id="output-sps-hard"></td>
+          <td id="output-sps-expert"></td>
+          <td id="output-sps-expertplus"></td>
+        </tr>
+      </table>
+      <br>
+      <span>Works for NPS too.</span>
+    </div>
+    <hr>
+    <div>
+      <h3>Color Picker</h3>
+      <label for="option-colorscheme">Color Scheme:</label>
+      <select id="option-colorscheme" name="option-colorscheme"></select>
+      <table>
+        <tr>
+          <th>Part</th>
+          <th>Hex</th>
+          <th>Color Picker</th>
+          <th>Include</th>
+        </tr>
+        <tr>
+          <td class="table-first">Left Note</td>
+          <td><input type="text" class="table-input" id="input-hex-colorleft"></td>
+          <td><input type="color" class="table-input" id="input-picker-colorleft"></td>
+          <td><input type="checkbox" id="input-include-colorleft"></td>
+          <td><input type="button" id="input-reset-colorleft" value="Reset"></td>
+        </tr>
+        <tr>
+          <td class="table-first">Right Note</td>
+          <td><input type="text" class="table-input" id="input-hex-colorright"></td>
+          <td><input type="color" class="table-input" id="input-picker-colorright"></td>
+          <td><input type="checkbox" id="input-include-colorright"></td>
+          <td><input type="button" id="input-reset-colorright" value="Reset"></td>
+        </tr>
+        <tr>
+          <td class="table-first">Left Environment</td>
+          <td><input type="text" class="table-input" id="input-hex-envcolorleft"></td>
+          <td><input type="color" class="table-input" id="input-picker-envcolorleft"></td>
+          <td><input type="checkbox" id="input-include-envcolorleft"></td>
+          <td><input type="button" id="input-reset-envcolorleft" value="Reset"></td>
+        </tr>
+        <tr>
+          <td class="table-first">Right Environment</td>
+          <td><input type="text" class="table-input" id="input-hex-envcolorright"></td>
+          <td><input type="color" class="table-input" id="input-picker-envcolorright"></td>
+          <td><input type="checkbox" id="input-include-envcolorright"></td>
+          <td><input type="button" id="input-reset-envcolorright" value="Reset"></td>
+        </tr>
+        <tr>
+          <td class="table-first">Left Environment Boost</td>
+          <td><input type="text" class="table-input" id="input-hex-envcolorleftboost"></td>
+          <td><input type="color" class="table-input" id="input-picker-envcolorleftboost"></td>
+          <td><input type="checkbox" id="input-include-envcolorleftboost"></td>
+          <td><input type="button" id="input-reset-envcolorleftboost" value="Reset"></td>
+        </tr>
+        <tr>
+          <td class="table-first">Right Environment Boost</td>
+          <td><input type="text" class="table-input" id="input-hex-envcolorrightboost"></td>
+          <td><input type="color" class="table-input" id="input-picker-envcolorrightboost"></td>
+          <td><input type="checkbox" id="input-include-envcolorrightboost"></td>
+          <td><input type="button" id="input-reset-envcolorrightboost" value="Reset"></td>
+        </tr>
+        <tr>
+          <td class="table-first">Obstacle</td>
+          <td><input type="text" class="table-input" id="input-hex-obstaclecolor"></td>
+          <td><input type="color" class="table-input" id="input-picker-obstaclecolor"></td>
+          <td><input type="checkbox" id="input-include-obstaclecolor"></td>
+          <td><input type="button" id="input-reset-obstaclecolor" value="Reset"></td>
+        </tr>
+      </table>
+      <br>
+      <label for="io-colorjson">JSON format:</label><br>
+      <textarea id="io-colorjson" name="io-colorjson" cols="48" rows="12"></textarea><br>
+      <span id="error-colorjson"></span>
+      <br>
+      <span>
+        Paste difficulty _customData onto text area<br>
+        OR<br>
+        Copy text into difficulty _customData<br>
+        (ignore first bracket, i'll deal with that later)
+      </span>
     </div>
   </div>
   <hr>
   <div style="float: right">
     <span id="watermark"></span>
-    <a id="version"></a>
+    <span id="version"></span>
   </div>
   <script src="./index.js" defer></script>
   <script src="./ui.js" defer></script>
