fixed some funny

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <br>
       <div>
         <label for="option-njs-scale">Jump distance scale for:</label>
-        <select class="input" id="option-njs-scale" disabled>
+        <select class="select" id="option-njs-scale" disabled>
           <option value="njs">NJS - Note Jump Speed</option>
           <option value="hjd" selected>HJD - Half Jump Duration</option>
         </select><br>
@@ -99,7 +99,9 @@
         </tr>
       </table>
       <br>
-      <span>Works for NPS too.</span>
+      <div>
+        <span>Works for NPS too.</span>
+      </div>
     </div>
     <hr>
     <div>
@@ -168,12 +170,14 @@
       <textarea id="io-colorjson" name="io-colorjson" cols="48" rows="12"></textarea><br>
       <span id="error-colorjson"></span>
       <br>
-      <span>
-        Paste difficulty _customData onto text area<br>
-        OR<br>
-        Copy text into difficulty _customData<br>
-        (ignore first bracket, i'll deal with that later)
-      </span>
+      <div>
+        <span>
+          Paste difficulty _customData onto text area<br>
+          OR<br>
+          Copy text into difficulty _customData<br>
+          (ignore first bracket, i'll deal with that later)
+        </span>
+      </div>
     </div>
   </div>
   <hr>
