sps difference update
total reduction percentage

--- a/index.html
+++ b/index.html
@@ -98,9 +98,10 @@
           <td id="output-sps-expertplus"></td>
         </tr>
       </table>
+      <span>Total Reduction: <span id="output-sps-total-reduction">0.00%</span></span><br>
       <br>
       <div>
-        <span>Works for NPS too.</span>
+        <span>Works for NPS or any number too.</span>
       </div>
     </div>
     <hr>
