--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <h1>Beat Saber Mapping Utility</h1>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
   <div class="main">
     <h2>Map Settings</h2>
     <label for="input-bpm">BPM:</label>
