--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <input type="text" id="input-difficulty-label"><br>
         <span class="diff-labels" id="output-difficulty-label"></span>
       </div>
-      <span>NOTE: may not be representitive in-game, near boundary are very likely to ellipses.</span>
+      <span>NOTE: may not be representitive in-game, near boundary are very likely to ellipsis.</span>
     </div>
     <hr>
     <div>
