--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Beat Saber Mapping Utility by Kival Evan">
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" type="image/jpg" href="favicon.png">
   <link href='https://fonts.googleapis.com/css?family=Teko' rel='stylesheet'>
@@ -104,9 +105,9 @@
         <div id="score-calculator">
           <h2>Score Calculator</h2>
           <div class="subpanel-medium">
-            <label for="score-input-notes">Notes:</label>
+            <label for="score-input-note">Notes:</label>
             <input type="number" id="score-input-note" min="0" step="1"><br>
-            <label for="score-input-percent">Star Rating:</label>
+            <label for="score-input-star">Star Rating:</label>
             <input type="number" id="score-input-star" min="0" step="0.1"><br>
             <label for="score-input-percent">Percentage:</label>
             <input type="number" id="score-input-percent" min="0" max="100" step="1"><br>
@@ -120,7 +121,7 @@
                 id="score-output-maxscore-modifier">0</span></span><br>
           </div>
           <div class="subpanel-medium">
-            <label for="score-input-missed">Avg. Cut:</label>
+            <label for="score-input-avgcut">Avg. Cut:</label>
             <input type="number" id="score-input-avgcut" min="0" step="1"><br>
             <label for="score-input-missed">Missed:</label>
             <textarea id="score-input-missed" name="score-input-missed" cols="36" rows="2"></textarea><br>
@@ -159,11 +160,11 @@
           <h2>SPS Difference</h2>
           <table>
             <tr>
-              <th>Easy</th>
-              <th>Normal</th>
-              <th>Hard</th>
-              <th>Expert</th>
-              <th>Expert+</th>
+              <th><label for="sps-input-easy">Easy</label></th>
+              <th><label for="sps-input-normal">Normal</label></th>
+              <th><label for="sps-input-hard">Hard</label></th>
+              <th><label for="sps-input-expert">Expert</label></th>
+              <th><label for="sps-input-expertplus">Expert+</label></th>
             </tr>
             <tr>
               <td><input type="number" class="table-input" id="sps-input-easy" min="0" step="0.1"></td>
