--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
           <div class="subpanel-medium">
             <label for="score-option-pp-curve">PP Curve:</label>
             <select id="score-option-pp-curve">
-              <option value="scoresaber" selected>ScoreSaber</option>
-              <option value="exponential">Exponential</option>
+              <option value="ScoreSaber" selected>ScoreSaber</option>
+              <option value="ScoreSaber 2020">ScoreSaber 2020</option>
               <option value="custom">Custom</option>
             </select><br>
             <label for="score-text-json">JSON format:</label><br>
