--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <span>Optimal JD (highest): </span><span id="njs-output-jd-optimal-high">0</span><br>
           <span>Optimal JD (lowest): </span><span id="njs-output-jd-optimal-low">0</span><br>
           <br>
-          <span><strong>Note time distance before:</strong></span><br>
+          <span><strong>Allowed note time distance or beat precision before:</strong></span><br>
           <span>Reverse Staircase (V/H): </span><span id="njs-output-reverse-staircase">0</span>
           -> 1/<span id="njs-output-reverse-staircase-time">0</span> precision<br>
           <span>Reverse Staircase (Diagonal): </span><span id="njs-output-reverse-staircase-diagonal">0</span>
