Add Dragons 2 and Panic 2

--- a/index.html
+++ b/index.html
@@ -224,6 +224,8 @@
           <h2>Color Picker</h2>
           <label for="cp-option-colorscheme">Color Scheme:</label>
           <select id="cp-option-colorscheme" name="option-colorscheme"></select>
+          <input type="checkbox" id="cp-show-custom">
+          <label for="cp-show-custom">Show others</label>
           <table>
             <tr>
               <th>Part</th>
