White and boost color pick

--- a/index.html
+++ b/index.html
@@ -262,6 +262,13 @@
               <td><input type="button" id="cp-input-reset-envcolorright" value="Reset"></td>
             </tr>
             <tr>
+              <td class="table-first">White Env.</td>
+              <td><input type="text" class="table-input" id="cp-input-hex-envcolorwhite"></td>
+              <td><input type="color" class="table-input" id="cp-input-picker-envcolorwhite"></td>
+              <td><input type="checkbox" id="cp-input-include-envcolorwhite"></td>
+              <td><input type="button" id="cp-input-reset-envcolorwhite" value="Reset"></td>
+            </tr>
+            <tr>
               <td class="table-first">Left Env. Boost</td>
               <td><input type="text" class="table-input" id="cp-input-hex-envcolorleftboost"></td>
               <td><input type="color" class="table-input" id="cp-input-picker-envcolorleftboost"></td>
@@ -274,6 +281,13 @@
               <td><input type="color" class="table-input" id="cp-input-picker-envcolorrightboost"></td>
               <td><input type="checkbox" id="cp-input-include-envcolorrightboost"></td>
               <td><input type="button" id="cp-input-reset-envcolorrightboost" value="Reset"></td>
+            </tr>
+            <tr>
+              <td class="table-first">White Env. Boost</td>
+              <td><input type="text" class="table-input" id="cp-input-hex-envcolorwhiteboost"></td>
+              <td><input type="color" class="table-input" id="cp-input-picker-envcolorwhiteboost"></td>
+              <td><input type="checkbox" id="cp-input-include-envcolorwhiteboost"></td>
+              <td><input type="button" id="cp-input-reset-envcolorwhiteboost" value="Reset"></td>
             </tr>
             <tr>
               <td class="table-first">Obstacle</td>
